Add Preliminary Site Content
Created a 404.html page, copied from the ryanbranch/data.ryanbran.ch repository

Added the favicon.ico file used by my other websites

Updated _config.yml to use a new more-relevant description, and also to include some potentially-useful-in-the-future content copied over from data.ryanbran.ch

Lastly, updated index.html to make use of the new (jekyanbranch) landing-page.html Layout and added some generic landing page content to inform users of the site's purpose and point them towards the ryanbran.ch domain.

--- a/index.html
+++ b/index.html
@@ -1,2 +1,21 @@
-<h1>index.html</h1>
-<p>index.html</p>
+---
+permalink: /index.html
+layout: landing-page
+---
+
+<div class="container">
+  <h1>ryanbranch.net</h1>
+  <hr />
+  <br />
+  <h3><strong>Welcome!</strong></h3>
+  <p>You've found your way to <strong>ryanbranch.net</strong>, a domain owned by Ryan Branch.</p>
+  <p>My main domain is <a href="https://ryanbran.ch/"><strong>ryanbran.ch</strong></a>. However, this uses the <a href="https://en.wikipedia.org/wiki/.ch">ccTLD for Switzerland</a> and so it is often excluded from search results elsewhere in the world.
+  <p>The purpose of this website is to act as a landing page to direct users to my other content, primarily with the goal of making it easier to find the <a href="https://ryanbran.ch/"><strong>ryanbran.ch</strong></a> website.</p>
+  <br />
+  <br />
+  <h3><strong>Visit <a href="https://ryanbran.ch/">ryanbran.ch</a></strong></h3>
+  <br />
+  <br />
+  <h3>More content coming soon!</h3>
+  
+</div>
